[package]
name = "dataxlr8-truthseeker-mcp"
version = "0.1.0"
edition = "2024"
description = "Truth validation MCP server for DataXLR8 platform — cross-checks claims, data, and repos against ground truth"
repository = "https://github.com/pdaxt/dataxlr8-truthseeker-mcp"

[dependencies]
# MCP SDK
rmcp = { version = "0.17", features = ["server", "transport-io"] }

# Shared core
dataxlr8-mcp-core = { path = "../dataxlr8-mcp-core" }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "migrate",
    "chrono",
    "uuid",
] }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"

# Types
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# TruthSeeker-specific
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
regex = "1"
